--- a/config/database.yml
+++ b/config/database.yml
@@ -29,8 +29,8 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
-  username: penha
-  password: 12345678
+  #username: penha
+  #password: 12345678
 
 development:
   <<: *default
